# rag-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: health.py  ingest.py  query.py  sessions.py
backend/app/generation/: citation_builder.py  hallucination.py  llm_client.py  prompt_builder.py  stream_handler.py
backend/app/ingestion/: chunker.py  embedder.py  pipeline.py
backend/app/ingestion/parsers/: csv_parser.py  html_parser.py  pdf_parser.py
backend/app/observability/: metrics.py
backend/app/retrieval/: bm25_store.py  compressor.py  hybrid_retriever.py  reranker.py  vector_store.py
backend/app/security/: injection_guard.py  rate_limiter.py
backend/app/session/: manager.py
backend/app/utils/: cache.py  retry.py
backend/scripts/: bulk_ingest.py  generate_synthetic_data.py
backend/tests/: test_generation.py  test_ingestion.py  test_retrieval.py  test_security.py
docs/: api_documentation.md  architecture.md  deployment_railway.md  evaluation_report.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  DocumentUpload.jsx  MonitoringDashboard.jsx  SessionSidebar.jsx  SourceCitations.jsx  Toast.jsx
frontend/src/hooks/: useSession.js  useStream.js
frontend/src/services/: api.js
monitoring/: prometheus.yml
